testdata/baselines/reference/submodule/conformance/importAssertion2(module=esnext).errors.txt
2.ts(1,28): error TS2322: Type '{}' is not assignable to type 'ImportAttributes'.
  Index signature for type 'string' is missing in type '{}'.


==== 0.ts (0 errors) ====
    export const a = 1;
    export const b = 2;
    
==== 1.ts (0 errors) ====
    export {} from './0' assert { type: "json" }
    export { a, b } from './0' assert { type: "json" }
    export * from './0' assert { type: "json" }
    export * as ns from './0' assert { type: "json" }
    
==== 2.ts (1 errors) ====
    export { a, b } from './0' assert {}
                               ~~~~~~~~~
!!! error TS2322: Type '{}' is not assignable to type 'ImportAttributes'.
!!! error TS2322:   Index signature for type 'string' is missing in type '{}'.
    export { a as c, b as d } from './0' assert { a: "a", b: "b", c: "c" }
    